# IPL_PREDICTION_MODEL_7

./: .gitignore  README.md  app.py  pipe.pkl  pyproject.toml  render.yaml
